--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
-spring.application.name=ebanking-backend
-spring.datasource.url=jdbc:h2:mem:bank
-spring.h2.console.enabled=true
+#spring.application.name=ebanking-backend
+#spring.datasource.url=jdbc:h2:mem:bank
+#spring.h2.console.enabled=true
 server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/ebanking?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
